--- a/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
 
 @foreach(var post in Model)
 {
-    <a href="/@post.Url">@post.Title </a> <br />
+    <a href="/@post.Url">@post.Url </a> <br />
 }
