no console log, redirect should 301, add code block to theme page
Former-commit-id: e370f0191af676fccfcdd4cd1b154c51f6b72ea3 [formerly 19a9584fcd32ea2e4dfab948610e7310b36a41b2]
Former-commit-id: 404ad7b9a7b3dbfd120c3d3c0bb54ca3095461ba

--- a/src/TerribleDev.Blog.Web/Views/Home/Theme.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Theme.cshtml
@@ -27,5 +27,11 @@
         Eget arcu dictum varius duis at consectetur. Imperdiet proin fermentum leo vel orci. Sed pulvinar proin gravida hendrerit lectus. Est sit amet facilisis magna etiam tempor orci eu lobortis. Quam pellentesque nec nam aliquam. Amet justo donec enim diam vulputate ut pharetra sit. Neque aliquam vestibulum morbi blandit cursus risus. In nibh mauris cursus mattis molestie a iaculis. Et leo duis ut diam quam nulla porttitor. Dolor purus non enim praesent elementum facilisis leo vel fringilla. Viverra orci sagittis eu volutpat odio. Integer feugiat scelerisque varius morbi. Est ullamcorper eget nulla facilisi etiam dignissim. Viverra vitae congue eu consequat ac felis. Ut diam quam nulla porttitor massa id. Pharetra sit amet aliquam id. Mus mauris vitae ultricies leo integer malesuada nunc.
     </p>
     <pre>
+        <code>
+            public void awesome () {
+
+            }
+            @("<a href=\"#\">yesss</a>")
+        </code>
     </pre>
 </article>
