--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -3,7 +3,10 @@
     ViewData["Title"] = "Post";
 }
 
-<article class="main-content-wrap">
-    <h1>@Model.Title</h1>
+<article class="main-content-wrap" itemprop="blogPost">
+    <h1 itemprop="headline">@Model.Title</h1>
+    <time itemprop="datePublished" content="@Model.PublishDate.ToString()">@Model.PublishDate.ToString("D")</time>
+</time>
+
     @Model.Content
 </article>
