--- a/src/TerribleDev.Blog.Web/Views/Home/Theme.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Theme.cshtml
@@ -8,6 +8,7 @@
     <h2>Welcome to devland @Model</h2>
     <h3>Welcome to devland @Model</h3>
     <h4>Welcome to devland @Model</h4>
+    <a href="#" class="btn">Button</a>
     <pre></pre>
     <blockquote>I am a blockquote</blockquote>
     <code>I am code</code>
