--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.css
@@ -92,3 +92,28 @@ a:visited {
         color: #4A4A4A !important;
         border: 1px solid #738691 !important;
     }
+    @media screen and (max-width: 768px) {
+        html {
+            font-size: 14px;
+        }
+        h1 {
+            font-size: 2.6rem;
+        }
+        
+        h2 {
+            font-size: 2.4rem;
+        }
+        
+        h3 {
+            font-size: 2.2rem;
+        }
+        
+        h4 {
+            font-size: 2.0rem;
+        }
+        
+        h5 {
+            font-size: 1.8rem;
+        }
+
+    } 
