--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -3,10 +3,10 @@
     ViewData["Title"] = "Post";
 }
 <cache vary-by-route="postUrl">
-    <article class="main-content-wrap" itemprop="blogPost">
-        <a href="/" class="btn">< Home</a>
+    <article itemprop="blogPost">
         <h1 itemprop="headline" class="headline">@Model.Title</h1>
         <time class="headlineSubtext" itemprop="datePublished" content="@Model.PublishDate.ToString()">@Model.PublishDate.ToString("D")</time>
         @Model.Content
+        <a href="/" class="btn">< Home</a>
     </article>
 </cache>
