--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -10,3 +10,7 @@
         <a href="/" class="btn">< Home</a>
     </article>
 </cache>
+
+@section Head {
+    <meta name="description" content="@Model.SummaryPlain" />
+}
