--- a/src/TerribleDev.Blog.Web/Views/Home/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Nav.cshtml
@@ -1,13 +1,12 @@
 ﻿<nav class="navBar">
-    <p>
-        yo dawg
-    </p>    <p>
-        yo dawg
-    </p>    <p>
-        yo dawg
-    </p>    <p>
-        yo dawg
-    </p>    <p>
-        yo dawg
-    </p>
+    <img src="~/content/tommyAvatar3.jpg" class="round" />
+    <span>Tommy "Terrible Dev" Parnell</span>
+    <ul class="sidebarBtns">
+        <li><a href="/" class="link-unstyled">Home</a></li>
+        <li><a href="/all-tags" class="link-unstyled">Tags</a></li>
+        <li><a href="/about" class="link-unstyled">About</a></li>
+        <li><a href="https://github.com/terribledev" target="_blank" class="link-unstyled">Github</a></li>
+        <li><a href="https://twitter.com/terribledev" target="_blank" class="link-unstyled">Twitter</a></li>
+        <li><a href="mailto:tommy@terribledev.io" class="link-unstyled">Email</a></li>
+    </ul>
 </nav>
