--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -11,16 +11,18 @@
     @RenderSection("Head", false)
     <title>@ViewData["Title"] - The Ramblings of TerribleDev</title>
     <environment names="Development">
-        <link asp-append-version="true" rel="stylesheet" href="~/css/site.css" />
+        <link asp-append-version="true" rel="stylesheet" href="~/css/site.css" async />
     </environment>
     <environment names="Production">
-        <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
+        <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" async/>
     </environment>
 </head>
 <body>
     @if (ViewData["RenderNav"] != null)
     {
-        <partial name="Nav" />
+        <desktopOnly  user-agent="@this.Context.Request.Headers["User-Agent"]">
+            <partial name="Nav" />
+        </desktopOnly>
     }
     @if (ViewData["NoWrap"] != null)
     {
