--- a/src/TerribleDev.Blog.Web/Views/_ViewImports.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TerribleDev.Blog.Web
 @using TerribleDev.Blog.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, TerribleDev.Blog.Web
