--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.css
@@ -43,6 +43,7 @@ body {
     margin: 0 auto;
     padding-right: 1.2em;
     padding-left: 1.2em;
+    padding-bottom: 1.2em;
 }
 
     .main-content-wrap img {
@@ -51,10 +52,10 @@ body {
         max-width: 100%;
         margin-bottom: 1.2rem
     }
+
 #main {
     width: calc(100% - 250px);
     float: right;
-
 }
 
 .headline {
@@ -85,9 +86,9 @@ a {
     font-weight: 400;
 }
 
-a:visited {
-    color: #9c9c9c;
-}
+    a:visited {
+        color: #9c9c9c;
+    }
 
 .btn {
     width: auto;
@@ -98,7 +99,7 @@ a:visited {
     cursor: pointer;
     color: #5d686f !important;
     border: 1px solid #9eabb3;
-    padding: .25em .8em;
+    padding: .3em .2em;
     text-decoration: none !important;
     font-size: 1.1rem;
     text-transform: uppercase;
@@ -137,6 +138,7 @@ a:visited {
     .navBar {
         display: none !important;
     }
+
     #main {
         width: initial;
         float: initial;
@@ -161,6 +163,27 @@ a:visited {
     position: fixed;
     height: 100%;
     top: 0;
-    background-color: red;
+    background: #4A4A4A;
+    color: white;
     width: 250px;
+    padding-top: 20px;
+}
+
+    .navBar > * {
+        max-width: 100%;
+        color: white;
+    }
+
+.sidebarBtns {
+    padding: 0;
+    list-style: none;
+}
+
+    .sidebarBtns > li {
+        margin-bottom: 1.5rem;
+        padding-left: 23px;
+    }
+
+.round {
+    border-radius: 50%;
 }
