--- a/src/TerribleDev.Blog.Web/Views/Home/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Nav.cshtml
@@ -1,5 +1,5 @@
 ﻿<nav class="navBar">
-    <img src="~/content/tommyAvatar3.jpg" class="round" />
+    <img src="~/content/tommyAvatar3.jpg" class="round" asp-append-version="true" />
     <span>Tommy "Terrible Dev" Parnell</span>
     <ul class="sidebarBtns">
         <li><a href="/" class="link-unstyled">Home</a></li>
