--- a/src/TerribleDev.Blog.Web/Views/Shared/DisplayTemplates/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/DisplayTemplates/Post.cshtml
@@ -4,5 +4,15 @@
     <h1 itemprop="headline" class="headline">@Model.Title</h1>
     <time class="headlineSubtext" itemprop="datePublished" content="@Model.PublishDate.ToString()">@Model.PublishDate.ToString("D")</time>
     @Model.Content
-    <a href="/" class="btn">< Home</a>
+    @if (Model.tags.Count > 0)
+    {
+        <div>
+            <span>Tagged In:</span><br />
+            @foreach (var tag in Model.tags)
+            {
+                <a href="/tag/@tag" class="btn block">@tag</a>
+            }
+        </div>
+    }
+
 </article>
