--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.css
@@ -45,6 +45,12 @@ body {
     padding-left: 1.2em;
     padding-bottom: 1.2em;
 }
+    .main-content-wrap.headerBump {
+        padding-top: 55px;
+        padding-right: 1.2em;
+        padding-left: 1.2em;
+        padding-bottom: 1.2em;
+    }
 
     .main-content-wrap img {
         display: block;
@@ -60,6 +66,7 @@ body {
 
 .headline {
     margin-bottom: 0;
+    margin-top: 0;
 }
 
 .headlineSubtext {
@@ -104,9 +111,13 @@ a {
     font-size: 1.1rem;
     text-transform: uppercase;
 }
-/*.btn pad {
-    margin-bottom: 4px;
-}*/
+
+    .btn.block {
+        display: inline-block;
+        margin-bottom: 4px;
+        margin-right: 4px;
+        font-size: .9rem;
+    }
 
     .btn:hover {
         color: #4A4A4A !important;
@@ -176,6 +187,21 @@ a {
         max-width: 100%;
         color: white;
     }
+.header {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 55px;
+    top: 0;
+    border: 1px solid #eef2f8;
+    color: #88909a;
+    background-color: white;
+    z-index: 20;
+    padding: 0;
+    margin: 0;
+}
 
 .sidebarBtns {
     padding: 0;
