--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -1,19 +1,22 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    <partial name="Gtm" />
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
     <meta name="author" content="Tommy &quot;TerribleDev&quot; Parnell" />
     <meta name="theme-color" content="#4A4A4A" />
     <link rel="alternate" type="application/atom+xml" title="RSS" href="/rss.xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="alternate" type="application/atom+xml" title="RSS" href="/rss.xml">
+    <link rel="manifest" href="~/manifest.json" asp-append-version="true">
     <link asp-append-version="true" rel="icon" href="~/favicon.ico" />
     <title>@ViewData["Title"] - The Ramblings of TerribleDev</title>
     <environment names="Development">
         <link asp-append-version="true" rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment names="Production">
-        <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css"/>
+        <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
     </environment>
     @RenderSection("Head", false)
 </head>
