--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.css
@@ -46,7 +46,7 @@ body {
     padding-bottom: 1.2em;
 }
     .main-content-wrap.headerBump {
-        padding-top: 55px;
+        padding-top: 3.5rem;
         padding-right: 1.2em;
         padding-left: 1.2em;
         padding-bottom: 1.2em;
@@ -89,12 +89,12 @@ code, pre {
 }
 
 a {
-    color: #6fa1c2;
+    color: #00558d;
     font-weight: 400;
 }
 
     a:visited {
-        color: #9c9c9c;
+        color: #6c6c6c;
     }
 
 .btn {
@@ -193,10 +193,10 @@ a {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 55px;
+    height: 3.5rem;
     top: 0;
     border: 1px solid #eef2f8;
-    color: #88909a;
+    color: #4A4A4A;
     background-color: white;
     z-index: 20;
     padding: 0;
