--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.css
@@ -216,3 +216,9 @@ a {
 .round {
     border-radius: 50%;
 }
+
+.nextPageHome {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: .5rem
+}
