--- a/src/TerribleDev.Blog.Web/Views/Home/FourOhFour.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/FourOhFour.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "FourOhFour";
-    ViewData["RenderNav"] = true;
+    ViewData["DisableHeader"] = true;
 }
 
 <h1>Ruh Oh!</h1>
