--- a/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewData["Title"] = "Home Page";
-    ViewData["DisableHeader"] = true;
 }
 <cache vary-by-route="pageNumber">
 
@@ -22,4 +21,7 @@
 
 @section Head {
     <partial name="StockMeta" />
+    <style>
+
+    </style>
 }
