--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.css
@@ -121,6 +121,94 @@ a {
         border: 1px solid #738691 !important;
     }
 
+
+
+.link-unstyled {
+    cursor: pointer !important;
+    color: inherit !important;
+    text-decoration: none !important;
+    font-weight: inherit !important;
+}
+
+.btmRule {
+    border-bottom: 1px solid #eef2f8;
+}
+
+.navBar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    height: 100%;
+    top: 0;
+    background: #4A4A4A;
+    color: white;
+    width: 250px;
+    padding-top: 20px;
+    transition: width ease-in-out .5s;
+    z-index: 100;
+    overflow: auto;
+}
+    .navBar.withBody > * > * > #closeNav {
+        display: none;
+    }
+    .navBar.withBody.hide {
+        width: 250px;
+    }
+    .navBar.hide {
+        width: 0;
+    }
+
+    .navBar > * {
+        max-width: 100%;
+        color: white;
+    }
+.header {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 3.5rem;
+    top: 0;
+    border: 1px solid #eef2f8;
+    color: #4A4A4A;
+    background-color: white;
+    z-index: 20;
+    padding: 0;
+    margin: 0;
+}
+.headerCallout {
+    margin: auto;
+}
+
+#menuBtn {
+    cursor: pointer;
+    margin-left: 1rem;
+}
+
+.sidebarBtns {
+    padding: 0;
+    list-style: none;
+}
+
+    .sidebarBtns > li {
+        margin-bottom: 1.5rem;
+        text-align: center;
+    }
+
+.round {
+    border-radius: 50%;
+}
+
+.bottomNavButtons {
+    display: flex;
+    flex-direction: row;
+    margin-top: .5rem;
+    width: 100%;
+}
+.spacer {
+    flex-grow: 1;
+}
 @media screen and (max-width: 768px) {
     html {
         font-size: 14px;
@@ -146,82 +234,18 @@ a {
         font-size: 1.8rem;
     }
 
+    .navBar {
+        width: 100%;
+    }
+    .navBar.withBody.hide {
+        width: 0;
+    }
+    .navBar.withBody > * > * > #closeNav {
+        display: unset;
+    }
+
     .bodyWithNav {
         width: initial;
         float: initial;
     }
-}
-
-.link-unstyled {
-    cursor: pointer !important;
-    color: inherit !important;
-    text-decoration: none !important;
-    font-weight: inherit !important;
-}
-
-.btmRule {
-    border-bottom: 1px solid #eef2f8;
-}
-
-.navBar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: fixed;
-    height: 100%;
-    top: 0;
-    background: #4A4A4A;
-    color: white;
-    width: 250px;
-    padding-top: 20px;
-    transition: width ease-in .5s;
-    z-index: 100;
-}
-    .navBar.hide {
-        width: 0;
-        overflow: auto;
-    }
-
-    .navBar > * {
-        max-width: 100%;
-        color: white;
-    }
-.header {
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 3.5rem;
-    top: 0;
-    border: 1px solid #eef2f8;
-    color: #4A4A4A;
-    background-color: white;
-    z-index: 20;
-    padding: 0;
-    margin: 0;
-}
-
-.sidebarBtns {
-    padding: 0;
-    list-style: none;
-}
-
-    .sidebarBtns > li {
-        margin-bottom: 1.5rem;
-        padding-left: 23px;
-    }
-
-.round {
-    border-radius: 50%;
-}
-
-.bottomNavButtons {
-    display: flex;
-    flex-direction: row;
-    margin-top: .5rem;
-    width: 100%;
-}
-.spacer {
-    flex-grow: 1;
 }
