--- a/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
@@ -9,14 +9,17 @@
     {
         <partial name="PostSummary" model="post" />
     }
-    @if (Model.HasNext)
-    {
         <div class="bottomNavButtons">
-            <a href="/page/@(Model.Page - 1)/" class="btn">&#8592; Previous Page</a>
+            @if (Model.HasPrevious)
+            {
+                <a href="/page/@(Model.Page - 1)/" class="btn">&#8592; Previous Page</a>
+            }
             <div class="spacer"></div>
-            <a href="/page/@(Model.Page + 1)/" class="btn">Next Page &#8594;</a>
+            @if (Model.HasNext)
+            {
+                <a href="/page/@(Model.Page + 1)/" class="btn">Next Page &#8594;</a>
+            }
         </div>
-    }
 </cache>
 
 @section Head {
