--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -7,8 +7,8 @@
     <ul class="sidebarBtns">
         <li><a href="/" class="link-unstyled">Home</a></li>
         <li><a href="/all-tags" class="link-unstyled">Tags</a></li>
-        <li><a href="https://github.com/terribledev" target="_blank" class="link-unstyled">Github</a></li>
-        <li><a href="https://twitter.com/terribledev" target="_blank" class="link-unstyled">Twitter</a></li>
+        <li><a href="https://github.com/terribledev" rel="noreferrer" target="_blank" class="link-unstyled">Github</a></li>
+        <li><a href="https://twitter.com/terribledev" rel="noreferrer" target="_blank" class="link-unstyled">Twitter</a></li>
         <li><a href="mailto:tommy@terribledev.io" class="link-unstyled">Email</a></li>
         <li><span class="link-unstyled" id="closeNav">Close Navbar</span></li>
     </ul>
