fix all the things

--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -2,11 +2,12 @@
     var hideNav = ViewData["HideNav"] != null ? "" : "withBody";
 }
 <nav class="navBar hide @hideNav" id="navBar">
-    <img src="" data-src="/content/tommyAvatar3.jpg" class="lazy round" />
+    <img src="" alt="An image of TerribleDev" data-src="/content/tommyAvatar3.jpg" class="lazy round" />
     <span>Tommy "Terrible Dev" Parnell</span>
     <ul class="sidebarBtns">
         <li><a href="/" class="link-unstyled">Home</a></li>
         <li><a href="/all-tags" class="link-unstyled">Tags</a></li>
+        <li><a href="/rss.xml" class="link-unstyled">RSS Feed</a></li>
         <li><a href="https://github.com/terribledev" rel="noreferrer" target="_blank" class="link-unstyled">Github</a></li>
         <li><a href="https://twitter.com/terribledev" rel="noreferrer" target="_blank" class="link-unstyled">Twitter</a></li>
         <li><a href="mailto:tommy@terribledev.io" class="link-unstyled">Email</a></li>
