--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.css
@@ -6,6 +6,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #4A4A4A;
     line-height: 1.45;
     letter-spacing: -.01em;
+    line-height: 1.25em
 }
 
 h1 {
@@ -94,41 +95,6 @@ a {
         color: #6c6c6c;
     }
 
-.btn {
-    width: auto;
-    height: auto;
-    background: #fff !important;
-    border-radius: 3px;
-    margin: 0;
-    cursor: pointer;
-    color: #5d686f !important;
-    border: 1px solid #9eabb3;
-    padding: .3em .2em;
-    text-decoration: none !important;
-    font-size: 1.1rem;
-    text-transform: uppercase;
-}
-
-    .btn.block {
-        display: inline-block;
-        margin-bottom: 4px;
-        margin-right: 4px;
-        font-size: .9rem;
-    }
-
-    .btn:hover {
-        color: #4A4A4A !important;
-        border: 1px solid #738691 !important;
-    }
-
-
-
-.link-unstyled {
-    cursor: pointer !important;
-    color: inherit !important;
-    text-decoration: none !important;
-    font-weight: inherit !important;
-}
 
 .btmRule {
     border-bottom: 1px solid #eef2f8;
@@ -209,6 +175,43 @@ a {
 .spacer {
     flex-grow: 1;
 }
+
+.btn {
+    width: auto;
+    height: auto;
+    background: #fff;
+    border-radius: 3px;
+    margin: 0;
+    cursor: pointer;
+    color: #5d686f;
+    border: 1px solid #9eabb3;
+    padding: .3em .2em;
+    text-decoration: none;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+}
+
+    .btn.block {
+        display: inline-block;
+        margin-bottom: 4px;
+        margin-right: 4px;
+        font-size: .9rem;
+    }
+
+    .btn:hover {
+        color: #4A4A4A;
+        border: 1px solid #738691;
+    }
+
+
+
+a.link-unstyled, div.link-unstyled, span.link-unstyled, svg.link-unstyled {
+    cursor: pointer;
+    color: inherit;
+    text-decoration: none;
+    font-weight: inherit;
+}
+
 @media screen and (max-width: 768px) {
     html {
         font-size: 14px;
