--- a/src/TerribleDev.Blog.Web/Views/Tags/AllTags.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Tags/AllTags.cshtml
@@ -3,11 +3,12 @@
     ViewData["Title"] = "all-tags";
 }
 <h2>All Tags</h2>
+<cache>
 @foreach (var tag in Model.Keys)
 {
     <a href="/tag/@tag/" class="btn block">@tag</a>
 }
-
+</cache>
 @section Head {
     <partial name="StockMeta" />
 }
