--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -9,16 +9,16 @@
 </cache>
 
 @section Head {
-    <meta name="description" content="@Model.SummaryPlain" />
+    <meta name="description" content="@Model.SummaryPlainShort" />
     <meta property="og:type" content="blog">
     <meta property="og:title" content="@Model.Title">
     <meta property="og:url" content="https://blog.terribledev.io/Visualizing-your-react-redux-performance-bottlenecks/index.html">
     <meta property="og:site_name" content="The Ramblings of TerribleDev">
-    <meta property="og:description" content="@Model.SummaryPlain">
+    <meta property="og:description" content="@Model.SummaryPlainShort">
     <meta property="og:updated_time" content="2019-01-20T15:07:51.000Z">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="@Model.Title">
-    <meta name="twitter:description" content="@Model.SummaryPlain">
+    <meta name="twitter:description" content="@Model.SummaryPlainShort">
     <meta name="twitter:image" content="https://blog.terribledev.io/1.png">
     <meta name="twitter:creator" content="@@TerribleDev">
     <meta property="og:image" content="https://www.gravatar.com/avatar/333e3cea32cd17ff2007d131df336061?s=640" />
