--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -12,14 +12,21 @@
     <meta name="description" content="@Model.SummaryPlainShort" />
     <meta property="og:type" content="blog">
     <meta property="og:title" content="@Model.Title">
-    <meta property="og:url" content="https://blog.terribledev.io/Visualizing-your-react-redux-performance-bottlenecks/index.html">
+    <meta property="og:url" content="https://blog.terribledev.io/@Model.Url/">
     <meta property="og:site_name" content="The Ramblings of TerribleDev">
     <meta property="og:description" content="@Model.SummaryPlainShort">
-    <meta property="og:updated_time" content="2019-01-20T15:07:51.000Z">
+    <meta property="og:updated_time" content="@Model.PublishDate.ToString("O")">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="@Model.Title">
     <meta name="twitter:description" content="@Model.SummaryPlainShort">
-    <meta name="twitter:image" content="https://blog.terribledev.io/1.png">
     <meta name="twitter:creator" content="@@TerribleDev">
     <meta property="og:image" content="https://www.gravatar.com/avatar/333e3cea32cd17ff2007d131df336061?s=640" />
+    @foreach(var image in Model.Images.Take(6))
+    {
+        <meta property="og:image" content="https://blog.terribledev.io@(image)">
+    }
+    @if(Model.Images.Count > 0)
+    {
+        <meta name="twitter:image" content="https://blog.terribledev.io@(Model.Images[0])">
+    }
 }
