more meta fixes

--- a/src/TerribleDev.Blog.Web/Views/Shared/StockMeta.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/StockMeta.cshtml
@@ -1,7 +1,7 @@
 ﻿<meta name="description" content="My name is Tommy Parnell. I usually go by TerribleDev on the internets. These are just some of my writings and rants about the software space." />
 <meta property="og:type" content="blog">
 <meta property="og:title" content="The Ramblings of TerribleDev">
-<meta property="og:url" content="https://blog.terribledev.io/index.html">
+<meta property="og:url" content="https://blog.terribledev.io/">
 <meta property="og:site_name" content="The Ramblings of TerribleDev">
 <meta property="og:description" content="My name is Tommy Parnell. I usually go by TerribleDev on the internets. These are just some of my writings and rants about the software space.">
 <meta name="twitter:card" content="summary">
