--- a/src/TerribleDev.Blog.Web/Views/Shared/DisplayTemplates/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/DisplayTemplates/Post.cshtml
@@ -1,4 +1,4 @@
-﻿@model IPost
+﻿@model TerribleDev.Blog.Core.Models.Post
 
 <article itemprop="blogPost">
     <h1 itemprop="headline" class="headline">@Model.Title</h1>
