--- a/src/TerribleDev.Blog.Web/Views/Shared/PostSummary.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/PostSummary.cshtml
@@ -1,4 +1,4 @@
-﻿@model IPost
+﻿@model TerribleDev.Blog.Core.Models.Post
 
 <article class="btmRule">
     <h3 itemprop="headline" class="headline"><a href="/@Model.Url/" class="link-unstyled">@Model.Title</a></h3>
