commit to fs in core only

--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -25,7 +25,7 @@
     {
     <meta property="og:image" content="https://blog.terribledev.io@(image)">
     }
-    @if(Model.Images.Count > 0)
+    @if(Model.Images.Length > 0)
     {
     <meta name="twitter:image" content="https://blog.terribledev.io@(Model.Images[0])">
     }
