--- a/src/TerribleDev.Blog.Web/Views/Shared/StockMeta.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/StockMeta.cshtml
@@ -1,11 +1,12 @@
-﻿<meta name="description" content="My name is Tommy Parnell. I usually go by TerribleDev on the internets. These are just some of my writings and rants about the software space." />
+﻿@inject BlogConfiguration config
+<meta name="description" content="My name is Tommy Parnell. I usually go by TerribleDev on the internets. These are just some of my writings and rants about the software space." />
 <meta property="og:type" content="blog">
-<meta property="og:title" content="The Ramblings of TerribleDev">
+<meta property="og:title" content="@config.Title">
 <meta property="og:url" content="https://blog.terribledev.io/">
-<meta property="og:site_name" content="The Ramblings of TerribleDev">
+<meta property="og:site_name" content="@config.Title">
 <meta property="og:description" content="My name is Tommy Parnell. I usually go by TerribleDev on the internets. These are just some of my writings and rants about the software space.">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="The Ramblings of TerribleDev">
+<meta name="twitter:title" content="@config.Title">
 <meta name="twitter:description" content="My name is Tommy Parnell. I usually go by TerribleDev on the internets. These are just some of my writings and rants about the software space.">
 <meta name="twitter:creator" content="@@TerribleDev">
 <meta property="og:image" content="https://www.gravatar.com/avatar/333e3cea32cd17ff2007d131df336061?s=640" />
